<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    tools:showIn="@layout/app_bar_main">

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Industrial Master"-->
        <!--android:textSize="30sp"-->
        <!--android:padding="10dp"-->
        <!--android:textColor="@color/DividerColor"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:textAlignment="center"-->
        <!--android:elevation="10dp"/>-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scaleType="centerInside"
        android:src="@drawable/img"
        android:elevation="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/username"
        android:gravity="center_vertical"
        android:textSize="14sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/usernamehint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/password"
        android:gravity="center_vertical"
        android:textSize="14sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/passwordhint"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textColor="@color/PrimaryText"
            android:background="@color/colorPrimary"
            android:textSize="24sp"
            android:onClick="login"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/reset"
            android:textColor="@color/PrimaryText"
            android:background="@color/colorAccent"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donthaveaccount"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:clickable="true"
            android:textColor="@color/SecondaryText"/>
    </LinearLayout>
</LinearLayout>